--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
      <li><a href="https://giphy.com/gifs/hockey-woahdude-backflip-R92t4Yv7lhEju" > Hockey</a></li>
      <li><a href="https://tenor.com/view/yes-sir-gif-21083977">having brews with the boys</a></li>
     </ol>  
-    <a href="contact info.html">Contact me</a>
+    <a href="Contact info.html">Contact me</a>
 </body>
 </html>
